--- a/frontend/checklist-frontend/src/App.css
+++ b/frontend/checklist-frontend/src/App.css
@@ -1,38 +1,23 @@
+/* src/App.css */
+
+/* App container */
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+/* Header */
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #444444;
+  color: #fff;
+  height: 50px; /* Adjust the height as needed */
+  padding: 50px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Header text */
+.App-header h1 {
+  font-size: 50px;
+  margin: 0;
 }
