--- a/frontend/checklist-frontend/src/components/AddItemForm.module.css
+++ b/frontend/checklist-frontend/src/components/AddItemForm.module.css
@@ -19,7 +19,7 @@
   /* Submit button */
   .form-submit-button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #3846c2;
     color: #fff;
     border: none;
     border-radius: 10px;
